--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,38 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "start-environment",
+            "type": "shell",
+            "group": "test",
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "shell-create-folders",
+                "podman-compose-up-camunda-env",
+                "mvn-clean",
+                "mvn-package-skip-tests"
+            ]
+        },
+        {
+            "label": "stop-environment",
+            "type": "shell",
+            "group": "test",
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "podman-compose-down-camunda-env",
+                "shell-cleanup-folders"
+            ]
+        },
+        {
+            "label": "stop-environment-cleandata",
+            "type": "shell",
+            "group": "test",
+            "dependsOrder": "sequence",
+            "dependsOn": [
+                "podman-compose-down-cleandata-camunda-env",
+                "shell-cleanup-folders"
+            ]
+        },
+        {
             "label": "shell-cleanup-folders",
             "type": "shell",
             "command": "rm -rf bin logs",
@@ -19,6 +51,24 @@
             "group": "none",
         },
         {
+            "label": "podman-compose-up-camunda-env",
+            "type": "shell",
+            "command": "podman compose --file collections/camunda/docker-compose.yaml up --detach",
+            "group": "none",
+        },
+        {
+            "label": "podman-compose-down-camunda-env",
+            "type": "shell",
+            "command": "podman compose --file collections/camunda/docker-compose.yaml down",
+            "group": "none",
+        },
+        {
+            "label": "podman-compose-down-cleandata-camunda-env",
+            "type": "shell",
+            "command": "podman compose --file collections/camunda/docker-compose.yaml down --volumes",
+            "group": "none",
+        },
+        {
             "label": "podman-system-prune",
             "type": "shell",
             "command": "podman system prune --force --all --volumes",
@@ -27,36 +77,36 @@
         {
             "label": "mvn-clean",
             "type": "shell",
-            "command": "mvn clean --file pom.xml --settings settings.xml",
+            "command": "mvn clean --file pom.xml",
             "windows": {
-                "command": "mvn clean --file pom.xml --settings settings.xml",
+                "command": "mvn clean --file pom.xml",
             },
             "group": "build",
         },
         {
             "label": "mvn-compile",
             "type": "shell",
-            "command": "mvn compile --file pom.xml --settings settings.xml",
+            "command": "mvn compile --file pom.xml",
             "windows": {
-                "command": "mvn compile --file pom.xml --settings settings.xml",
+                "command": "mvn compile --file pom.xml",
             },
             "group": "build",
         },
         {
-            "label": "mvn-package",
+            "label": "mvn-package-skip-tests",
             "type": "shell",
-            "command": "mvn package --file pom.xml --settings settings.xml -Dspring.profiles.active=default,linux",
+            "command": "mvn package --file pom.xml --define skipTests=true",
             "windows": {
-                "command": "mvn package --file pom.xml --settings settings.xml -Dspring.profiles.active=default,windows"
+                "command": "mvn package --file pom.xml --define skipTests=true"
             },
             "group": "build",
         },
         {
             "label": "mvn-dependencies-tree",
             "type": "shell",
-            "command": "mvn dependency:tree --file pom.xml --settings settings.xml 1> logs/maven-dependency-tree.log",
+            "command": "mvn dependency:tree --file pom.xml 1> logs/maven-dependency-tree.log",
             "windows": {
-                "command": "mvn dependency:tree --file pom.xml --settings settings.xml > logs\\maven-dependency-tree.log"
+                "command": "mvn dependency:tree --file pom.xml > logs\\maven-dependency-tree.log"
             },
             "group": "build",
             "dependsOrder": "sequence",
@@ -68,9 +118,9 @@
         {
             "label": "mvn-display-dependency-updates",
             "type": "shell",
-            "command": "mvn versions:display-dependency-updates --file pom.xml --settings settings.xml 1> logs/maven-dependency-updates.log",
+            "command": "mvn versions:display-dependency-updates --file pom.xml 1> logs/maven-dependency-updates.log",
             "windows": {
-                "command": "mvn versions:display-dependency-updates --file pom.xml --settings settings.xml > logs\\maven-dependency-updates.log"
+                "command": "mvn versions:display-dependency-updates --file pom.xml > logs\\maven-dependency-updates.log"
             },
             "group": "build",
             "dependsOrder": "sequence",
