--- a/pom.xml
+++ b/pom.xml
@@ -7,21 +7,32 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.4</version>
         <relativePath />
-        <!-- lookup parent from repository -->
     </parent>
-    <groupId>io.camunda.demo</groupId>
+    <groupId>com.camunda.demo</groupId>
     <artifactId>process.payments</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>Process payments</name>
+    <version>1.0.0</version>
+    <name>process-payments</name>
     <description>Process payments with Camunda</description>
     <properties>
         <java.version>21</java.version>
         <camunda.version>8.7.8</camunda.version>
+        <logback.contrib.version>0.1.5</logback.contrib.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
         <dependency>
@@ -35,15 +46,34 @@
             <artifactId>spring-boot-starter-camunda-sdk</artifactId>
             <version>${camunda.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback.contrib</groupId>
+            <artifactId>logback-json-classic</artifactId>
+            <version>${logback.contrib.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback.contrib</groupId>
+            <artifactId>logback-jackson</artifactId>
+            <version>${logback.contrib.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
+                <groupId>io.github.git-commit-id</groupId>
+                <artifactId>git-commit-id-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>./bin</outputDirectory>
+                </configuration>
             </plugin>
         </plugins>
+        <finalName>camunda-app-${project.version}</finalName>
     </build>
 
 </project>
