Fix bad network to send emails

--- a/collections/docker-compose.yaml
+++ b/collections/docker-compose.yaml
@@ -409,6 +409,7 @@ services:
       interval: 30s
     networks:
       - web-modeler
+      - camunda-platform #Required for zeebe to be able to send emails
 
   web-modeler-restapi:
     container_name: web-modeler-restapi
